--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,1 +1,7 @@
-
+/* src/components/Sidebar/Sidebar.css */
+.sidebar {
+  width: 250px;
+  background-color: #f5f5f5;
+  height: 100vh;
+  padding: 20px;
+}
