--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -1,7 +1,26 @@
-/* src/components/Sidebar/Sidebar.css */
 .sidebar {
-  width: 250px;
-  background-color: #f5f5f5;
+  width: 220px;
   height: 100vh;
+  background-color: #1f2937;
+  color: white;
   padding: 20px;
+  float: left;
+}
+
+.sidebar h2 {
+  margin-bottom: 20px;
+}
+
+.sidebar ul {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar li {
+  margin: 15px 0;
+}
+
+.sidebar a {
+  color: white;
+  text-decoration: none;
 }
